# Kabuki-Cord

./: .env.example  .gitattributes  .gitignore  Install-Kabuki-Cord.cmd  README.md  Run-Kabuki-Cord.cmd  SECURITY.md  pyproject.toml
character_cards/: default.json
config/: servers.example.json  servers.json
docs/: DEVSECOPS_EXPERT.md  OPERATOR_GUIDE.md  RELEASING.md  SECURITY_REVIEW.md  SPRITES.md  V2_ANIMATION_ROADMAP.md  V2_ARCHITECTURE.md
scripts/: check_version.py  generate_backfill_v2_sprite.py  generate_brand_icons_v2.py  generate_delivery_celebration_v2_sprite.py  generate_discord_blocked_sprite.py  generate_discord_blocked_v2_sprite.py  generate_dojo_sweep_frames.py  generate_dojo_sweep_v2_frames.py  generate_dry_mode_v2_sprite.py  generate_full_auto_v2_sprite.py  generate_latest_sprite.py  generate_latest_v2_sprite.py  generate_launch_theme.py  generate_live_fire_sprite.py  generate_live_fire_v2_sprite.py  generate_monitor_spy_frames.py  generate_posting_v2_sprite.py  generate_readme_screenshots.py  generate_refresh_sprite.py  generate_refresh_v2_sprite.py  generate_repair_sprite.py  generate_repair_v2_sprite.py  generate_scanner_monitor_v2_frames.py  generate_scanner_v2_sprite.py  generate_semi_auto_sprite.py  generate_semi_auto_v2_sprite.py  generate_spy_story_sprite.py  generate_sync_sprite.py  generate_sync_v2_sprite.py  generate_update_mask_workshop_v2_sprites.py  optimize_runtime_frames.py  secret_scan.py  smoke_gui.py  v2_sprite_pipeline.py  verify_release_archive.py  verify_wheel.py
tests/: test_approval_state.py  test_approval_workflow.py  test_browser_helpers.py  test_desktop_bridge.py  test_diagnostics.py  test_discarded_approvals.py  test_discord_text.py  test_engagement_candidates.py  test_engagement_state.py  test_events.py  test_gui_manual_approval.py  test_gui_message_helpers.py  test_llm_context.py  test_memory.py  test_output_guard.py  test_reaction_ledger.py  test_reactions.py  test_release_signing_contract.py  (+17 more)
(+121 files in other folders)
